2014-10-22  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_grammar.y (ipaddr): Use g_strdup_printf() instead of
	g_malloc0() + snprintf().

	* nasl/nasl_tree.c (dup_cell), nasl/nasl_var.c (affect_to_anon_var)
	(rray2str): Adequately add extra byte for null terminator when
	allocating memory buffers.

2014-10-22  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_cert.c (parse_dn_part_for_CN): Set p pointer properly. Fixes
	scanner segfault introduced by r20560.

2014-10-21  Henri Doreau <henri.doreau@gmail.com>

	* misc/network.c (internal_recv): Reworked the way memory is managed.
	The function now always allocates memory (how much is needed) and lets
	the caller responsible for releasing it with g_free eventually.

	* misc/plugutils.c (plug_get_key): Free the internal_recv buffer after
	use.

2014-10-21  Henri Doreau <henri.doreau@gmail.com>

	* misc/plugutils.c (_add_plugin_preference): Replaced g_malloc0() +
	snprintf() by g_strdup_printf().

	* nasl/exec.c (cell2str): Replaced g_malloc0() + snprintf() by
	g_strdup_printf().

2014-10-21  Henri Doreau <henri.doreau@gmail.com>

	* nasl/nasl_builtin_find_service.c (fwd_data): Don't pre-allocate a
	buffer for internal_recv() and systematically free it after use.

2014-10-20  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/exec.c (nasl_exec): Add extra byte when allocating memory for
	CONST_DATA and CONST_STRING cases, used for null terminator.

2014-10-17  Michael Wiegand <michael.wiegand@greenbone.net>

	The required minimum version for the GnuTLS library has actually been
	2.12 for a while now. Adjust documentation and checks accordingly.

	* INSTALL: Update prerequisites.

	* CMakeLists: Adjust minimum version in gnutls check.

2014-10-14  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 8.0+beta4.

2014-10-14  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-libraries 8.0+beta3 release.
